--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desenvolvedor M3</title>
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="main.css"/>
+  <!---icons-->
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+  
 </head>
 
 <body>
 
+<!---header-->
+<header>
+<div class="nav container">
+ <a href="#" class="logo">Ecommerce</a>
+ <i class='bx bxs-shopping-bag-alt' id="cart-icon"></i>
+</div>
+
+
+</header>
 </body>
-<h1>Desafio m3</h1>
+
 
 <script src="bundle.js"></script>
 
