adicionando as logos

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="main.css"/>
   <!---icons-->
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-  
+
 </head>
 
 <body>
@@ -17,7 +17,8 @@
 <!---header-->
 <header>
 <div class="nav container">
- <a href="#" class="logo">Ecommerce</a>
+  <a href="#" class="logo-m3"><img src="./img/logo-m3.png" alt="logo-m3"></a>
+ <a href="#" class="logo">Performance digital</a>
  <i class='bx bxs-shopping-bag-alt' id="cart-icon"></i>
 </div>
 
