--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,216 @@
 <!---header-->
 <header>
 <div class="nav container">
-  <a href="#" class="logo-m3"><img src="./img/logo-m3.png" alt="logo-m3"></a>
- <a href="#" class="logo">Performance digital</a>
+  <a href="#" class="logo"><img src="./img/logo-m3.png" alt="logo-m3"></a>
  <i class='bx bxs-shopping-bag-alt' id="cart-icon"></i>
 </div>
-
-
 </header>
+
+<!--shop-->
+<h1 class="section-title">Blusas 
+ <select name="ordernar" id="ordernar" style="width: 150px;" >
+
+  <option value="1"> ordernar por</option>
+  <option value="1"> Mais recentes</option>
+  <option value="1"> Maior preço</option>
+  <option value="1"> Menor preço</option>
+ </select>  
+
+</h1>
+
+
+<div style="display: flex; width: 55%; margin: 0 auto;">
+<aside>
+<section class="shop container">
+
+
+
+ <h3 class="filter_title">Cores</h3>
+
+
+<form class="filter-colors">
+  <div class="filter-colors-div">
+  <input type="checkbox" name="color-1" id="color-1" value="Amarelo">
+  <label for="Amarelo">Amarelo</label>
+</div>
+<div class="filter-colors-div">
+  <input type="checkbox" name="color-2" id="color-2" value="Azul">
+  <label for="Azul">Azul</label>
+</div>
+  <div class="filter-colors-div">
+  <input type="checkbox" name="color-3" id="color-3" value="Branco">
+  <label for="Branco">Branco</label>
+  </div>
+  <div class="filter-colors-div">
+  <input type="checkbox" name="color-4" id="color-4" value="Cinza">
+  <label for="Cinza">Cinza</label>
+</div>
+   <div class="filter-colors-div">
+  <input type="checkbox" name="color-5" id="color-5" value="Laranja">
+  <label for="Laranja">Laranja</label>
+</div>
+
+   <div></div>
+
+</form>
+
+<h3 class="filter_title">TAMANHOS</h3>
+
+<div class="filter-tamanho">
+ <button>P</button>
+ <button>M</button>
+ <button>G</button>
+ <button>GG</button>
+ <button>U</button>
+ <button>36</button>
+ <button>38</button>
+ <button>40</button>
+ <button>42</button>
+ <button>44</button>
+ <button>46</button>
+
+</div>
+</section>
+
+<h3 class="filter_title">FAIXA DE PREÇO</h3>
+
+
+<form class="filter-colors">
+  <div class="filter-colors-div">
+  <input type="checkbox" name="color-1" id="color-1" value="Amarelo">
+  <label for="Amarelo">de R$0 até R$50</label>
+</div>
+<div class="filter-colors-div">
+  <input type="checkbox" name="color-2" id="color-2" value="Azul">
+  <label for="Azul">de R$51 até R$150</label>
+</div>
+  <div class="filter-colors-div">
+  <input type="checkbox" name="color-3" id="color-3" value="Branco">
+  <label for="Branco">de R$151 até R$300</label>
+  </div>
+  <div class="filter-colors-div">
+  <input type="checkbox" name="color-4" id="color-4" value="Cinza">
+  <label for="Cinza">de R$301 até R$500</label>
+</div>
+   <div class="filter-colors-div">
+  <input type="checkbox" name="color-5" id="color-5" value="Laranja">
+  <label for="Laranja">a partir de R$ 01</label>
+</div>
+
+   <div></div>
+
+</form>
+
+</aside>
+
+
+                                          <!---BOXS-->
+
+
+<!---BOX 1-->
+
+
+<div class="shop-content">
+<div class="product-box">
+  <img src="./img/img_2.png" alt="CAMISETA MESCLA" class="product-img">
+  <h2 class="product-title">CAMISETA MESCLA</h2>
+  <span class="price">R$ 28,00</span>
+  <p>até 3x de R$9,33</p>
+  <button>COMPRAR</button>
+</div>
+<!---BOX 2-->
+
+
+  <div class="product-box">
+    <img src="./img/img_3.png" alt="CAMISETA MESCLA" class="product-img">
+    <h2 class="product-title">CAMISETA MESCLA</h2>
+    <span class="price">R$ 28,00</span>
+    <p>até 3x de R$9,33</p>
+    <button>COMPRAR</button>
+  </div>
+  <!---BOX 3-->
+
+
+  <div class="product-box">
+    <img src="./img/img_4.png" alt="CAMISETA MESCLA" class="product-img">
+    <h2 class="product-title">CAMISETA MESCLA</h2>
+    <span class="price">R$ 28,00</span>
+    <p>até 3x de R$9,33</p>
+    <button>COMPRAR</button>
+  </div>
+  <!---BOX 4-->
+
+
+  <div class="product-box">
+    <img src="./img/img_5.png" alt="CAMISETA MESCLA" class="product-img">
+    <h2 class="product-title">CAMISETA MESCLA</h2>
+    <span class="price">R$ 28,00</span>
+    <p>até 3x de R$9,33</p>
+    <button>COMPRAR</button>
+  </div>
+  <!---BOX 5-->
+
+
+  <div class="product-box">
+    <img src="./img/img_6.png" alt="CAMISETA MESCLA" class="product-img">
+    <h2 class="product-title">CAMISETA MESCLA</h2>
+    <span class="price">R$ 28,00</span>
+    <p>até 3x de R$9,33</p>
+    <button>COMPRAR</button>
+  </div>
+  <!---BOX 6-->
+
+  <div class="product-box">
+    <img src="./img/img_7.png" alt="CAMISETA MESCLA" class="product-img">
+    <h2 class="product-title">CAMISETA MESCLA</h2>
+    <span class="price">R$ 28,00</span>
+    <p>até 3x de R$9,33</p>
+    <button>COMPRAR</button>
+  </div>
+  <!---BOX 7-->
+
+
+  <div class="product-box">
+    <img src="./img/img_8.png" alt="CAMISETA MESCLA" class="product-img">
+    <h2 class="product-title">CAMISETA MESCLA</h2>
+    <span class="price">R$ 28,00</span>
+    <p>até 3x de R$9,33</p>
+    <button>COMPRAR</button>
+  </div>
+  <!---BOX 8-->
+
+<div class="shop-content">
+  <div class="product-box">
+    <img src="./img/img_9.png" alt="CAMISETA MESCLA" class="product-img">
+    <h2 class="product-title">CAMISETA MESCLA</h2>
+    <span class="price">R$ 28,00</span>
+    <p>até 3x de R$9,33</p>
+    <button>COMPRAR</button>
+  </div>
+  <!---BOX 9-->
+  <div class="product-box">
+    <img src="./img/img_10.png" alt="CAMISETA MESCLA" class="product-img">
+    <h2 class="product-title">CAMISETA MESCLA</h2>
+    <span class="price">R$ 28,00</span>
+    <p>até 3x de R$9,33</p>
+    <button>COMPRAR</button>
+  </div>
+ </section>
+</div>
+</div>
+</div>
+
+<button class="button-carregar-mais">CARREGAR MAIS</button>
+
+
+
+
+
+
+
+
+
 </body>
-
-
 <script src="bundle.js"></script>
 
 </html>
